Fix #5019 "Form Builder: minimal repeated grid is too narrow"
This was introduced by #3189. Note that we don't support numbering rows
with the minimal appearance yet but the UI doesn't enforce that.

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/grid/grid.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/grid/grid.less
@@ -118,9 +118,16 @@
                     border-right: none;
                     border-bottom: none;
 
-                    &:not(.fr-grid-readonly) {
+                    &:not(.fr-grid-readonly):not(.fr-grid-number-rows) {
                         .fr-grid-repeat-top-row, .fr-grid-repeat-iteration {
                             grid-template-columns: auto 35px;
+                        }
+                    }
+
+                    // 2021-12-06: Not supported in `grid-multiple.xbl` yet.
+                    &:not(.fr-grid-readonly).fr-grid-number-rows {
+                        .fr-grid-repeat-top-row, .fr-grid-repeat-iteration {
+                            grid-template-columns: 35px auto 35px;
                         }
                     }
 
